hphp/hack/test/typecheck/constraints/multi_as_invoke_ambiguous.php.like_types.exp
File "multi_as_invoke_ambiguous.php", line 27, characters 21-22:
Invalid argument (Typing[4110])
File "multi_as_invoke_ambiguous.php", line 20, characters 28-28:
Expected J
File "multi_as_invoke_ambiguous.php", line 26, characters 30-31:
But got Tg
File "multi_as_invoke_ambiguous.php", line 28, characters 31-32:
Invalid argument (Typing[4110])
File "multi_as_invoke_ambiguous.php", line 23, characters 28-28:
Expected K
File "multi_as_invoke_ambiguous.php", line 26, characters 30-31:
But got Tg
File "multi_as_invoke_ambiguous.php", line 29, characters 19-21:
You are trying to access the member Bar but this is not an object, it is a dynamic value or an object of type K (Typing[4062])
File "multi_as_invoke_ambiguous.php", line 19, characters 15-15:
Definition is here
